# flux-cpp

./: .gitmodules  CMakeLists.txt
src/arduino/: CMakeLists.txt  library.properties
src/arduino/examples/i2c/: i2c.ino
src/arduino/src/: I2CTwoWire.cpp  I2CTwoWire.h
src/cpp/: CMakeLists.txt  library.properties
src/cpp/src/: I2C.h  clock.h  flux-cpp.h  keyboard.h  logger.cpp  logger.h
src/macos/: CMakeLists.txt
src/macos/src/: macos_clock.h  onda-macos.h  stdio_logger.cpp  stdio_logger.h
src/stdio/: CMakeLists.txt  FluxMain.cpp  FluxMain.h  main.cpp
src/tests/: CMakeLists.txt
